# databricks-playground

./: .gitignore  README.md
airflow-dags/: README.md  load_weather_into_dbsql.py
aws-jwt-in-py-sdk/: README.md  aws-jwt-in-py-sdk.py  pyproject.toml
aws-jwt-in-py-sdk/terraform/: iam.tf  main.tf  outputs.tf  variables.tf  vm.tf  vpc.tf
azure-mi-in-py-sdk/: README.md  azure-mi-in-py-sdk.py  pyproject.toml
clojure-spark-demo/: README.md  project.clj
database-diagram-builder/: README.md  database-diagram-builder-notebook.py  database-diagram-builder-standalone.py
dbconnect-maven/: README.md  pom.xml
dbconnect-package-versions-check/: README.md  package_versions_check.py
dbconnect-sbt/: README.md  build.sbt
dbsql-with-aad-token/: README.md  dbsql-with-aad-token-mi.py  dbsql-with-aad-token-spn.py  dbsql-with-aad-token-user.py  dbsql-with-aad-token.py  requirements.txt
dbutils-in-jar/: README.md  pom.xml
dbutils-snippets/: repos.py
deactivate-activate-users-sps/: README.md  deactivate-activate-users-sps.py
guardrails-checks/: check_guardrails.py
init-scripts/: README.md  install-ssl-certificates.sh
ip-access-list-analyzer/: README.md  ip-acl-analyzer.py  requirements.txt  test.json
java-sdk-example/: pom.xml
kafka-aad-auth/: .editorconfig  LICENSE  README.md  pom.xml
kafka-eventhubs-aad-auth/: .editorconfig  LICENSE  README.md  pom.xml
oss-jdbc-aad-token/: README.md  pom.xml
pause-unpause-jobs/: README.md  pause_unpause_jobs.py
pyspark-snippets/: README.md  pytest.ini  requirements.txt  setup.py  unit-requirements.txt
(+41 files in other folders)
