[tool.poetry]
name = "aws-jwt-in-py-sdk"
version = "0.0.1"
description = ""
authors = ["Alex Ott <alexey.ott@databricks.com>"]
license = "Databricks License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
databricks-sdk = "^0.87.0"
boto3 = "^1.42.46"

[tool.poetry.group.test.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
